PruebaXertica/force-app/main/default/objects/Ex_clientes__c/Ex_clientes__c.object-meta.xml
<CustomObject>
    <label>Ex-clientes</label>
    <nameField>
        <displayFormat>YY-{0000}</displayFormat>
        <label>Ex-clientes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ex-clientes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>