PruebaXertica/force-app/main/default/objects/Ex_clientes__c/fields/Contacto__c.field-meta.xml
<CustomField>
    <fullName>Contacto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacto</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ex-clientes</relationshipLabel>
    <relationshipName>Ex_clientes</relationshipName>
    <type>Lookup</type>
</CustomField>