PruebaXertica/force-app/main/default/objects/Ex_clientes__c/fields/Generado_automaticamente__c.field-meta.xml
<CustomField>
    <fullName>Generado_automaticamente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generado automáticamente</label>
    <type>Checkbox</type>
</CustomField>